--- a/.classpath
+++ b/.classpath
@@ -5,13 +5,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="StarterCode/src"/>
-	<classpathentry kind="src" path="JDBC-Project-Group-B"/>
-	<classpathentry kind="lib" path="StarterCode/lib/ojdbc14.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="output" path="StarterCode/bin"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
